agregar imagen musico

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ vertical.align: top;
 
     <img src ="header_.jpg" alt= "">
     <img src="hero_5.jpg" alt="">
+    <img src="acustica_.jpg" alt="">
+
 
 
   </body>
