--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ vertical.align: top;
     <img src ="header_.jpg" alt= "">
     <img src="hero_5.jpg" alt="">
     <img src="acustica_.jpg" alt="">
+    <img src="clasica_.jpg" alt="">
 
 
 
