--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@ vertical.align: top;
   </head>
   <body>
 
-    <img src ="header_.jpg" alt= "">
-    <img src="hero_5.jpg" alt="">
-    <img src="acustica_.jpg" alt="">
-    <img src="clasica_.jpg" alt="">
+   
+    <img src="cambio_2.png" alt="">
   
 
 
