--- a/index.html
+++ b/index.html
@@ -13,8 +13,24 @@ border: 10px solid #d57266;
 
 img {
 max-width: 100%;
-vertical.align: top;
+vertical-align: top;
 }
+
+
+img#responsive{
+
+  display:none;
+}
+
+@media screen and (max-width: 768px){
+
+img#responsive{
+
+  display: block;
+}
+
+}
+
 
 </style>
 
@@ -23,9 +39,10 @@ vertical.align: top;
   <body>
 
    
-    <img src="cambio_2.png" alt="">
-  
-
+    <img src="cambio_1.png" id="responsive">
+    <img src="header_.jpg" alt="">
+    <img src="clasica_.jpg" alt="">
+    <img src="hero_5.jpg" alt="">
 
 
   </body>
