--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ img#responsive{
   </head>
   <body>
 
-   
+   <h1>cambio2</h1>
     <img src="cambio_2.png" id="responsive">
     <img src="header_.jpg" alt="">
     <img src="clasica_.jpg" alt="">
